2011-12-09  Kaz Kylheku  <kaz@kylheku.com>

	* configure: Fix patching without quilt.

2011-12-09  Kaz Kylheku  <kaz@kylheku.com>

	Build and pass test suite on Cygwin.

	* configure (longlong, ulonglong, superlong, usuperlong): Initialize
	these variables so that if the detection tests fail, the script
	does not access unbound variables.
	Avoid adding junk like .bss.* into config.h.

	* mpi-patches/config-types: Fixed wrong use of nonexistent
	SIZEOF_LONG_T.

2011-12-09  Kaz Kylheku  <kaz@kylheku.com>

	(Applies to previous commit.)

	* mpi-patches/config-types: Added missing definitions
	of MP_DIGIT_SIZE in two cases.

2011-12-09  Kaz Kylheku  <kaz@kylheku.com>

	Bignum support, here we go!

	Bignums, based on Michael Fromberger's MPI library, are integrated
	into the input syntax, stream output, equality testing, the garbage
	collector, and hashing.
	
	The plus operation handles transitions between fixnums and bignums.
	Other operations are still fixnum only.

	* Makefile (CFLAGS): Add mpi directory to include file search.
	(OBJS): Include new arith.o module and all of MPI_OBJS.
	(MPI_OBJS, MPI_OBJS_BASE): New variables.

	* configure (mpi_version, have_quilt, have_patch): New variables.
	Script detects whether patch and quilt are available. Unpacks
	mpi library, applies patches. Detects 128 bit integer type.
	Records more information in config.h about the sizes of types.

	* dep.mk: Updated.

	* depend.txr: Make work with paths that have directory components.

	* eval.c (eval_init): Rename of nump to fixnump.

	* gc.c (finalize, mark_obj): Handle BGNUM case.

	* hash.c: (hash_c_str): Changed to return unsigned long
	instead of long.
	(equal_hash): Handle BGNUM case.
	(eql_hash): Handle bignums with equal-hash, but other
	objects as eq.

	* lib.c (num_s): Variable renamed to fixnum_s.
	(bignum_s): New symbol variable.
	(code2type): Follow rename of num_s. Handle BGNUM case.
	(typeof): Follow rename of num_s.