@@ -1,7 +1,12 @@
+@(bind add-fname ("plus" "minus"))
+@(bind add-mp-op ("add" "sub"))
+@(bind add-mp-neg ("NOOP" "mp_neg"))
+@(bind add-c-op ("+" "-"))
+@(output)
 /* This file is generated using txr arith.txr > arith.c!
  *
  * Copyright 2011
- * Kaz Kylheku <kaz@kylheku.com>
+ * Kaz Kylheku <kaz@@kylheku.com>
  * Vancouver, Canada
  * All rights reserved.
  *
@@ -71,7 +76,8 @@ static val normalize(val bignum)
   }
 }
 
-val plus(val anum, val bnum)
+@(repeat)
+val @{add-fname}(val anum, val bnum)
 {
   int tag_a = tag(anum);
   int tag_b = tag(bnum);
@@ -81,7 +87,7 @@ val plus(val anum, val bnum)
     {
       cnum a = c_num(anum);
       cnum b = c_num(bnum);
-      cnum sum = a + b;
+      cnum sum = a @{add-c-op} b;
 
       if (sum < NUM_MIN || sum > NUM_MAX) {
         val n = make_bignum();
@@ -97,13 +103,13 @@ val plus(val anum, val bnum)
       type_check(bnum, BGNUM);
       n = make_bignum();
       if (sizeof (int_ptr_t) <= sizeof (mp_digit))  {
-        mp_add_d(mp(bnum), c_num(anum), mp(n));
-        NOOP(mp(n), mp(n));
+        mp_@{add-mp-op}_d(mp(bnum), c_num(anum), mp(n));
+        @{add-mp-neg}(mp(n), mp(n));
       } else {
         mp_int tmp;
         mp_init(&tmp);
         mp_set_intptr(&tmp, c_num(anum));
-        mp_add(mp(bnum), &tmp, mp(n));
+        mp_@{add-mp-op}(mp(bnum), &tmp, mp(n));
       }
       return normalize(n);
     }
@@ -113,12 +119,12 @@ val plus(val anum, val bnum)
         type_check(anum, BGNUM);
         n = make_bignum();
         if (sizeof (int_ptr_t) <= sizeof (mp_digit))  {
-          mp_add_d(mp(anum), c_num(bnum), mp(n));
+          mp_@{add-mp-op}_d(mp(anum), c_num(bnum), mp(n));
         } else {
           mp_int tmp;
           mp_init(&tmp);
           mp_set_intptr(&tmp, c_num(bnum));
-          mp_add(mp(anum), &tmp, mp(n));
+          mp_@{add-mp-op}(mp(anum), &tmp, mp(n));
         }
         return normalize(n);
     }
@@ -128,79 +134,15 @@ val plus(val anum, val bnum)
       type_check(anum, BGNUM);
       type_check(bnum, BGNUM);
       n = make_bignum();
-      mp_add(mp(anum), mp(bnum), mp(n));
+      mp_@{add-mp-op}(mp(anum), mp(bnum), mp(n));
       return normalize(n);
     }
   }
-  uw_throwf(error_s, lit("plus: invalid operands ~s ~s"), anum, bnum, nao);
+  uw_throwf(error_s, lit("@{add-fname}: invalid operands ~s ~s"), anum, bnum, nao);
   abort();
 }
 
-val minus(val anum, val bnum)
-{
-  int tag_a = tag(anum);
-  int tag_b = tag(bnum);
-
-  switch (TAG_PAIR(tag_a, tag_b)) {
-  case TAG_PAIR(TAG_NUM, TAG_NUM): 
-    {
-      cnum a = c_num(anum);
-      cnum b = c_num(bnum);
-      cnum sum = a - b;
-
-      if (sum < NUM_MIN || sum > NUM_MAX) {
-        val n = make_bignum();
-        mp_set_intptr(mp(n), sum);
-        return n;
-      }
-
-      return num(sum);
-    } 
-  case TAG_PAIR(TAG_NUM, TAG_PTR):
-    {
-      val n;
-      type_check(bnum, BGNUM);
-      n = make_bignum();
-      if (sizeof (int_ptr_t) <= sizeof (mp_digit))  {
-        mp_sub_d(mp(bnum), c_num(anum), mp(n));
-        mp_neg(mp(n), mp(n));
-      } else {
-        mp_int tmp;
-        mp_init(&tmp);
-        mp_set_intptr(&tmp, c_num(anum));
-        mp_sub(mp(bnum), &tmp, mp(n));
-      }
-      return normalize(n);
-    }
-  case TAG_PAIR(TAG_PTR, TAG_NUM):
-    {
-        val n;
-        type_check(anum, BGNUM);
-        n = make_bignum();
-        if (sizeof (int_ptr_t) <= sizeof (mp_digit))  {
-          mp_sub_d(mp(anum), c_num(bnum), mp(n));
-        } else {
-          mp_int tmp;
-          mp_init(&tmp);
-          mp_set_intptr(&tmp, c_num(bnum));
-          mp_sub(mp(anum), &tmp, mp(n));
-        }
-        return normalize(n);
-    }
-  case TAG_PAIR(TAG_PTR, TAG_PTR):
-    {
-      val n;
-      type_check(anum, BGNUM);
-      type_check(bnum, BGNUM);
-      n = make_bignum();
-      mp_sub(mp(anum), mp(bnum), mp(n));
-      return normalize(n);
-    }
-  }
-  uw_throwf(error_s, lit("minus: invalid operands ~s ~s"), anum, bnum, nao);
-  abort();
-}
-
+@(end)
 val neg(val anum)
 {
   if (bignump(anum)) {
@@ -218,3 +160,4 @@ void arith_init(void)
   mp_init(&NUM_MAX_MP);
   mp_set_intptr(&NUM_MAX_MP, NUM_MAX);
 }
+@(end)
